[package]
name = "cdk-from-cfn"
version = "0.174.0"
edition = "2021"
rust-version = "1.78"
description = "Turn AWS CloudFormation templates into AWS CDK applications"
license = "MIT OR Apache-2.0"

repository = "https://github.com/cdklabs/cdk-from-cfn"
homepage = "https://github.com/cdklabs/cdk-from-cfn#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["golang", "java", "typescript", "python", "csharp"]
# Language support
golang = []
java = []
typescript = []
csharp = []
python = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "^1.0.95"
base64 = "^0.22.1"
clap = { version = "^4.5.26", features = ["cargo"] }
indexmap = { version = "^2.7.0", features = ["serde"] }
nom = "^7.1.3"
numberkit = "^0.1.0"
phf = { version = "^0.11.3", features = ["macros"] }
rustc-hash = { version = "2.1.0", optional = true }
serde = { version = "^1.0.217", features = ["derive"] }
serde-enum-str = "^0.4.0"
serde_with = "^3.12.0"
serde_yaml = "^0.9.34"
thiserror = "^2.0.11"
topological-sort = "^0.2.2"
voca_rs = "^1.15.2"
wasm-bindgen = "^0.2.100"

[dev-dependencies]
aws-config = "^1.5.1"
aws-sdk-cloudformation = "^1.33.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
zip = "2.2.2"

[build-dependencies]
indexmap = "^2.7.0"
phf = { version = "^0.11.3", features = ["macros"] }
phf_codegen = "^0.11.3"
rustc-hash = { version = "2.1.0", optional = true }
serde = { version = "^1.0.217", features = ["derive"] }
serde-enum-str = "^0.4.0"
serde_json = "^1.0.135"
serde_with = "^3.12.0"
voca_rs = "^1.15.2"
walkdir = "2.5.0"
zip = "2.2.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
