[package]
name = "cdk-from-cfn"
version = "0.265.0"
edition = "2021"
description = "Turn AWS CloudFormation templates into AWS CDK applications"
license = "MIT OR Apache-2.0"

repository = "https://github.com/cdklabs/cdk-from-cfn"
homepage = "https://github.com/cdklabs/cdk-from-cfn#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["golang", "java", "typescript", "python", "csharp", "pre-install"]

# Language support
golang = ["cdk-from-cfn-testing/golang", "cdk-from-cfn-testing-end-to-end/golang"]
java = ["cdk-from-cfn-testing/java", "cdk-from-cfn-testing-end-to-end/java"]
typescript = ["cdk-from-cfn-testing/typescript", "cdk-from-cfn-testing-end-to-end/typescript"]
csharp = ["cdk-from-cfn-testing/csharp", "cdk-from-cfn-testing-end-to-end/csharp"]
python = ["cdk-from-cfn-testing/python", "cdk-from-cfn-testing-end-to-end/python"]

# Testing features
update-snapshots = ["cdk-from-cfn-testing/update-snapshots"]
skip-clean = ["cdk-from-cfn-testing/skip-clean"]
end-to-end = ["cdk-from-cfn-testing/end-to-end", "cdk-from-cfn-testing-end-to-end/end-to-end", "pre-install"]
pre-install = ["cdk-from-cfn-testing/pre-install"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "^0.22.1"
clap = { version = "^4.5.53", features = ["cargo"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
indexmap = { version = "^2.12.1", features = ["serde"] }
nom = "^8.0.0"
phf = { version = "^0.13.1", features = ["macros"] }
rustc-hash = { version = "2.1.1", optional = true }
serde = { version = "^1.0.228", features = ["derive"] }
serde-enum-str = "^0.4.0"
serde_json = "1.0"
serde_yaml = "^0.9.34"
thiserror = "^2.0.17"
topological-sort = "^0.2.2"
voca_rs = "^1.15.2"
wasm-bindgen = "^0.2.100"

[dev-dependencies]
cdk-from-cfn-macros = { path = "cdk-from-cfn-macros" }
cdk-from-cfn-testing = { path = "cdk-from-cfn-testing", features = ["golang", "java", "typescript", "python", "csharp"] }
cdk-from-cfn-testing-end-to-end = { path = "cdk-from-cfn-testing-end-to-end", features = ["golang", "java", "typescript", "python", "csharp"] }
futures = "0.3"
serial_test = "3.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
indexmap = "^2.12.1"
phf = { version = "^0.13.1", features = ["macros"] }
phf_codegen = "^0.13.1"
rustc-hash = { version = "2.1.1", optional = true }
serde = { version = "^1.0.228", features = ["derive"] }
serde-enum-str = "^0.4.0"
serde_json = "^1.0.147"
serde_with = "^3.16.1"
voca_rs = "^1.15.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.test]
opt-level = 1        # Light optimization
debug = false        # Keep debug info minimal
lto = false          # Disable LTO for faster compilation
incremental = true   # Enable incremental compilation
